fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/Contract_Partnership__c.object-meta.xml
<CustomObject>
    <label>Contract Partnership</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Partnership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>