fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Relationship that is valid but for whatever reason we need to have filtered out.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>