fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/fields/Sale_to__c.field-meta.xml
<CustomField>
    <fullName>Sale_to__c</fullName>
    <label>Sold-to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>