fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/fields/Ship_to__c.field-meta.xml
<CustomField>
    <fullName>Ship_to__c</fullName>
    <label>Ship-to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>