fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <description>Just a number to help with Data Loads</description>
    <label>Update</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>