fullSandbox11072023/force-app/main/default/objects/Contract_Partnership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ship_to__c</columns>
    <columns>Sale_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>